GEN/gdt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdt-service
  namespace: gdt-dev
  selfLink: /api/v1/namespaces/gdt-dev/services/gdt-service
  uid: 5c35619f-17f2-4cfa-872e-a8e09ad49f4e
  resourceVersion: '99847043'
  creationTimestamp: '2021-05-26T16:20:04Z'
  managedFields:
    - manager: kubectl
      operation: Update
      apiVersion: v1
      time: '2021-05-26T16:20:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:ports:
            .: {}
            k:{"port":80,"protocol":"TCP"}:
              .: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:app: {}
          f:sessionAffinity: {}
          f:type: {}
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: app-consentimento-service
  clusterIP: 10.0.204.231
  type: ClusterIP
  sessionAffinity: None
